# btb-world-maker

./: .gitignore  Dockerfile  LICENCE  README.md  setup.cfg  setup.py
btb_world_maker/: image_resizer.py  main.py  make_continent.py  make_continent_image.py  nation_creation.py  resolve_cm_tile.py
code/btb_worldmaker/: make_civilized_layer.py  make_continent.py  nation_creation.py
